<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#616161"
                android:textSize="24sp">

            </TextView>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textColor="#5D4037"
                android:textSize="14sp">

            </TextView>

            <EditText
                android:id="@+id/cityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFF"
                android:hint="@string/enter_city2"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#0D47A1"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            android:textColor="#795548"
            tools:ignore="UnknownId" />

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Clear Sky"
                android:textColor="#1B5E20"
                android:textSize="18sp"
                tools:ignore="HardcodedText">

            </TextView>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/_24_c"
                android:textColor="#D32F2F"
                android:textSize="90sp">

            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textColor="#006064">

                </TextView>
               <Space android:layout_width="50dp"
                   android:layout_height="wrap_content">
               </Space>

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textColor="#006064">

                </TextView>


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        android:contentDescription="TODO"
                        tools:ignore="ContentDescription,HardcodedText"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="#000000"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#000000"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">


                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        tools:ignore="ContentDescription"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sunset"
                        android:textColor="#000000"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#000000"
                        android:textSize="14sp">


                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        tools:ignore="ContentDescription"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="#000000"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#000000"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">

            </Space>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        tools:ignore="ContentDescription"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="#212121"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#212121"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        tools:ignore="ContentDescription,ImageContrastCheck"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="#212121"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="#212121"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#FFD47F"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        tools:ignore="ContentDescription"
                        app:tint="#FFF">


                    </ImageView>
                    <Space android:layout_height="wrap_content"
                        android:layout_width="5dp">

                    </Space>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"
                        android:textColor="#212121"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tanushree"
                        android:textColor="#212121"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
    <TextView
        android:id="@+id/errortext"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</RelativeLayout>

